--- a/gmission/src/main/res/values/strings.xml
+++ b/gmission/src/main/res/values/strings.xml
@@ -36,8 +36,7 @@
     <string name="message_bad_credentials">Email Address or Password is incorrect</string>
     <string name="message_auth_failed">Please enter a valid password</string>
     <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
-    <string name="timer_running">Timer is running</string>
-    <string name="timer_is_paused">Timer is paused</string>
+
     <string name="stop">Stop</string>
     <string name="start">Start</string>
     <string name="pause">Pause</string>
@@ -46,10 +45,10 @@
     <string name="navigation_drawer_open">Drawer Open</string>
     <string name="navigation_drawer_close">Drawer Close</string>
     <string name="title_campaign">Campaign</string>
-    <string name="title_timer">Timer</string>
     <string name="title_home">Home Page</string>
     <string name="title_logout">Log Out</string>
     <string name="title_message">Messages</string>
+    <string name="title_map">Map</string>
     <string name="message_reg_error">Register failed, please try again.</string>
     <string name="message_signing_up">Signing up…</string>
     <string name="register_check_password">You\'ll need to type in your password a second time to confirm it.</string>
