--- a/gmission/src/main/res/values-zh-rCN/strings.xml
+++ b/gmission/src/main/res/values-zh-rCN/strings.xml
@@ -1,2 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="app_name">gMission</string>
+
+    <string name="error_loading_user_profile">加载用户信息失败</string>
+    <string name="no_campaign">没有活动</string>
+    <string name="no_hit">没有问题</string>
+    <string name="no_answer">没有答案</string>
+    <string name="no_message">没有消息</string>
+
+
+    <string name="label_user_name">用户名称</string>
+    <string name="label_email_address">Email 地址</string>
+    <string name="label_password">密码 （最少6个字符）</string>
+    <string name="label_text_answer_hint">在此输入答案：</string>
+    <string name="label_text_question_title_hint">在此输入（至少5个字符）：</string>
+    <string name="label_text_question_content_hint">在此输入（至少5个字符）：</string>
+    <string name="label_location_name_hint">在此输入地点名称：</string>
+    <string name="label_sign_in">登陆</string>
+    <string name="label_sign_up">注册</string>
+    <string name="label_sign_out">退出</string>
+    <string name="label_register">注册</string>
+    <string name="label_reject">拒绝</string>
+    <string name="label_submit">提交</string>
+    <string name="label_ask_here">提问此处！</string>
+
+    <string name="label_location">地点：</string>
+    <string name="label_credit">积分：</string>
+    <string name="label_answer_count">答案：</string>
+    <string name="label_time">时长：</string>
+    <string name="label_answer_time">在：</string>
+
+    <string name="label_title">标题：</string>
+    <string name="label_content">内容：</string>
+    <string name="label_answer_type">答案类型：</string>
+    <string name="label_text_type">文本</string>
+    <string name="label_selection_type">选择</string>
+    <string name="label_image_type">图像</string>
+    <string name="label_received_answer_count">答案个数：</string>
+    <string name="label_approve_answer">接受</string>
+    <string name="label_deadline_time">截止时间：</string>
+
+
+    <string name="message_signing_in">正在登陆…</string>
+    <string name="message_bad_credentials">用户名或密码不正确</string>
+    <string name="message_auth_failed">请输入正确的密码</string>
+    <string name="message_auth_failed_new_account">请输入正确的用户名 &amp; 密码</string>
+    <string name="message_answer_success">回答成功！</string>
+    <string name="message_ask_question_success">问题已创建！</string>
+    <string name="message_reg_error">注册失败，请重试。</string>
+    <string name="message_signing_up">注册中…</string>
+    <string name="message_uploading">上传中…</string>
+    <string name="message_still_locating">正在等待GPS定位结果…</string>
+    <string name="message_cannot_create_image">现在照片无法被创建…</string>
+    <string name="message_current_location_unavailable">正在测算当前位置…</string>
+    <string name="message_answered">已经回答过此问题</string>
+    <string name="message_double_return_to_quit">再按一次返回键退出</string>
+
+
+
+    <string name="loading">Loading</string>
+    <string name="refreshing">Refreshing</string>
+    <string name="navigation_drawer_open">打开</string>
+    <string name="navigation_drawer_close">关闭</string>
+
+    <string name="title_campaign">活动</string>
+    <string name="title_home">主页</string>
+    <string name="title_logout">退出</string>
+    <string name="title_message">消息</string>
+    <string name="title_map">任务地图</string>
+    <string name="title_activity_hit_list">问题</string>
+    <string name="title_activity_hit">回答问题</string>
+    <string name="title_activity_bootstrap_account_register">注册账户</string>
+    <string name="title_activity_ask_spatial_task">提问</string>
+    <string name="title_activity_working_area">工作区域</string>
+    <string name="title_activity_answer_list">答案</string>
+
+
+    <string name="register_check_password_same">再次输入同样的密码来确认。</string>
+    <string name="register_check_email">无效的邮箱地址。</string>
+    <string name="register_check_name">无效的用户名（至少6个字符）。</string>
+    <string name="register_check_passwd">无效的密码（至少6个字符）。</string>
+
+    <string name="network_error_message">网络连接错误，请稍后重试。</string>
+    <string name="unauthorized_error_message">认证失效，请重新登陆。</string>
+
+    <string name="bad_hit_notification">此问题已损坏，请忽略。</string>
+
+    <string name="app_pic_folder">gmission_data/pic</string>
+
+    <string name="profile_requests">提问次数</string>
+    <string name="profile_answers">回答次数</string>
+
+    <string name="just_now">现在</string>
+    <string name="before">以前</string>
+    <string name="years_before">年前</string>
+    <string name="month_before">月前</string>
+    <string name="days_before">日前</string>
+    <string name="hours_before">小时前</string>
+    <string name="min_before">分钟前</string>
+
+</resources>
