--- a/gmission/src/main/res/values-zh-rCN/strings.xml
+++ b/gmission/src/main/res/values-zh-rCN/strings.xml
@@ -87,6 +87,7 @@
     <string name="unauthorized_error_message">认证失效，请重新登陆。</string>
 
     <string name="bad_hit_notification">此问题已损坏，请忽略。</string>
+    <string name="loading_notification">正在加载</string>
 
     <string name="app_pic_folder">gmission_data/pic</string>
 
