--- a/gmission/src/main/res/values-zh-rCN/strings.xml
+++ b/gmission/src/main/res/values-zh-rCN/strings.xml
@@ -24,6 +24,8 @@
     <string name="label_reject">拒绝</string>
     <string name="label_submit">提交</string>
     <string name="label_join">加入</string>
+    <string name="label_quit">退出</string>
+    <string name="label_view_campaign">查看活动</string>
     <string name="label_ask_here">提问此处！</string>
 
     <string name="label_location">地点：</string>
@@ -41,6 +43,10 @@
     <string name="label_received_answer_count">答案个数：</string>
     <string name="label_approve_answer">接受</string>
     <string name="label_deadline_time">截止时间：</string>
+    <string name="label_contribute_photo">贡献一个答案</string>
+    <string name="label_view_photos">查看图片</string>
+    <string name="label_view_3d_model">查看散点模型</string>
+    <string name="label_view_tasks">查看任务列表</string>
 
 
     <string name="message_signing_in">正在登陆…</string>
@@ -59,7 +65,11 @@
     <string name="message_current_location_unavailable">正在测算当前位置…</string>
     <string name="message_answered">已经回答过此问题</string>
     <string name="message_double_return_to_quit">再按一次返回键退出</string>
-
+    <string name="message_prompt_campaign">请加入这个活动，贡献您的一份力量！</string>
+    <string name="message_join_campaign_success">成功加入活动！</string>
+    <string name="message_quit_campaign_success">成功推出活动！</string>
+    <string name="message_fail">失败，请稍后重试...</string>
+    <string name="message_task_instruction_3d">请沿着地图上红色箭头指示的方向拍一张照片。</string>
 
 
     <string name="loading">Loading</string>
@@ -91,8 +101,10 @@
 
     <string name="bad_hit_notification">此问题已损坏，请忽略。</string>
     <string name="loading_notification">正在加载</string>
+    <string name="verifying_location_notification">正在校验你的位置... (请打开GPS并站在任务位置附近)</string>
 
     <string name="app_pic_folder">gmission_data/pic</string>
+    <string name="ply_folder">gmission_data/ply</string>
 
     <string name="profile_requests">提问次数</string>
     <string name="profile_answers">回答次数</string>
