--- a/gmission/src/main/res/values/strings.xml
+++ b/gmission/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="message_quit_campaign_success">Quit Campaign Success!</string>
     <string name="message_fail">Failed! Please try again later...</string>
     <string name="message_task_instruction_3d">Please take a photo along the direction indicated by the red arrow on the map.</string>
+    <string name="message_model_not_build">3D sparse model has not been built, please come back later...</string>
 
     <string name="loading">Loading</string>
     <string name="refreshing">Refreshing</string>
@@ -100,7 +101,7 @@
 
     <string name="bad_hit_notification">Broken Question! Please ignore this question.</string>
     <string name="loading_notification">Loading...</string>
-    <string name="verifying_location_notification">Verifying your location... (Please turn on your GPS and stand close to the indicated site)</string>
+    <string name="verifying_location_notification">Verifying your location... (Please turn on your GPS and move into the blue circle around the site marker)</string>
 
     <string name="app_pic_folder">gmission_data/pic</string>
     <string name="ply_folder">gmission_data/ply</string>
