--- a/gmission/src/main/res/values/strings.xml
+++ b/gmission/src/main/res/values/strings.xml
@@ -47,8 +47,9 @@
     <string name="label_deadline_time">Deadline:</string>
     <string name="label_contribute_photo">Contribute An Answer</string>
     <string name="label_view_photos">View Photos</string>
-    <string name="label_view_3d_model">View Sparse Model</string>
+    <string name="label_request_3d_model">Request Model Email</string>
     <string name="label_view_tasks">View Tasks List</string>
+    <string name="label_create_task">Create a Task</string>
 
     <string name="message_signing_in">Signing in…</string>
     <string name="message_bad_credentials">User Name or Password is incorrect</string>
@@ -72,6 +73,9 @@
     <string name="message_fail">Failed! Please try again later...</string>
     <string name="message_task_instruction_3d">Please take a photo along the direction indicated by the red arrow on the map.</string>
     <string name="message_model_not_build">3D sparse model has not been built, please come back later...</string>
+    <string name="message_email_sent">Email has been sent.</string>
+    <string name="message_select_location">Please choose the location of the task in the map below.</string>
+
 
     <string name="loading">Loading</string>
     <string name="refreshing">Refreshing</string>
@@ -87,7 +91,6 @@
     <string name="title_activity_hit">Answer Question</string>
     <string name="title_activity_bootstrap_account_register">Register Account</string>
     <string name="title_activity_ask_spatial_task">Ask Question</string>
-    <string name="title_activity_view_3d_model">View Sparse Model</string>
     <string name="title_activity_working_area">Working Area</string>
     <string name="title_activity_answer_list">Answers</string>
 
